--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@sentry/browser": "8.37.1",
     "@tarekraafat/autocomplete.js": "10.2.9",
-    "autosize": "^6.0.1",
+    "autosize": "6.0.1",
+    "daterangepicker": "3.1.0",
     "jquery": "3.7.1",
+    "moment": "2.30.1",
     "tributejs": "5.1.3"
   },
   "devDependencies": {
