--- a/.github/workflows/schema-update.yml
+++ b/.github/workflows/schema-update.yml
@@ -44,6 +44,7 @@ jobs:
       with:
         commit_message: 'docs: Update JSON schemas'
     - name: Create Pull Request
+      id: cpr
       if: github.ref == 'refs/heads/main'
       uses: peter-evans/create-pull-request@v7
       with:
