fix(ci): use separate UV CI cache for migrations
This job uses multiple Python versions and thus can be different from
the standard test cache.

This avoids https://github.com/astral-sh/uv/issues/8929

--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -45,7 +45,8 @@ jobs:
       with:
         enable-cache: true
         cache-dependency-glob: ''
-        cache-suffix: '3.13'
+        # Do not share cache with tests as this uses python 3.11 for older versions
+        cache-suffix: multi
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
