feat: add altcha integration
Issue #1462

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,7 +133,8 @@ dependencies = [
   "translation-finder>=2.16,<3.0",
   "user-agents>=2.0,<2.3",
   "weblate-language-data>=2024.9",
-  "weblate-schemas==2024.2"
+  "weblate-schemas==2024.2",
+  "altcha>=0.1.4,<2.0"
 ]
 description = "A web-based continuous localization system with tight version control integration"
 keywords = [
