--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,7 +167,8 @@ gerrit = [
   "git-review>=2.4.0,<2.5.0"
 ]
 google = [
-  "google-cloud-translate>=3.13.0,<4.0"
+  "google-cloud-translate>=3.13.0,<4.0",
+  "google-cloud-storage>=2.18.2,<3.0"
 ]
 ldap = [
   "django-auth-ldap>=4.6.0,<6.0.0"
