--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "daterangepicker": "3.1.0",
     "jquery": "3.7.1",
     "moment": "2.30.1",
+    "multi.js": "0.5.3",
     "tributejs": "5.1.3"
   },
   "devDependencies": {
+    "css-loader": "7.1.2",
+    "mini-css-extract-plugin": "2.9.2",
     "terser-webpack-plugin": "5.3.10",
     "webpack": "5.96.1",
     "webpack-cli": "5.1.4",
