chore(ci): use secret token only if available
Needed to make it work on pull requests.

--- a/.github/workflows/uv-upgrade.yml
+++ b/.github/workflows/uv-upgrade.yml
@@ -15,7 +15,7 @@ on:
     - .github/workflows/uv-upgrade.yml
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   uv-update:
@@ -23,8 +23,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      if: secrets.WEBLATE_CI_TOKEN
       with:
         token: ${{ secrets.WEBLATE_CI_TOKEN }}
+
+    - uses: actions/checkout@v4
 
     - uses: astral-sh/setup-uv@v3
       with:
