--- a/.github/workflows/uv-upgrade.yml
+++ b/.github/workflows/uv-upgrade.yml
@@ -6,6 +6,12 @@
 name: uv lock update
 
 on:
+  push:
+    branches:
+    - renovate/**
+    paths:
+    - pyproject.toml
+    - .github/workflows/uv-upgrade.yml
   schedule:
   - cron: 30 6 * * 0
   workflow_dispatch:
@@ -23,7 +29,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+      if: github.event_name != 'pull_request'
       with:
         token: ${{ secrets.WEBLATE_CI_TOKEN }}
 
@@ -70,7 +76,7 @@ jobs:
           dependencies
 
     - name: Enable Pull Request Automerge
-      if: steps.cpr.outputs.pull-request-operation && steps.cpr.outputs.pull-request-operation != 'none'"
+      if: steps.cpr.outputs.pull-request-operation && steps.cpr.outputs.pull-request-operation != 'none'
       run: gh pr merge --rebase --auto "${{ steps.cpr.outputs.pull-request-number }}"
       env:
         GH_TOKEN: ${{ secrets.WEBLATE_CI_TOKEN }}
