--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "daterangepicker": "3.1.0",
     "jquery": "3.7.1",
     "moment": "2.30.1",
+    "mousetrap": "1.6.5",
+    "mousetrap-global-bind": "1.1.0",
     "multi.js": "0.5.3",
     "tributejs": "5.1.3"
   },
