chore(dev-docker): pin container by hash
This is automatically updated anyway and it silents some security checkers.

--- a/dev-docker/weblate-dev/Dockerfile
+++ b/dev-docker/weblate-dev/Dockerfile
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-FROM weblate/weblate:5.8.3.1
+FROM weblate/weblate:5.8.3.1@sha256:7ec55d964874f6ed0d6b48aab9f389633771ab20173151d8486a603af3a0fed5
 
 ##########
 # WARNING!
