--- a/.github/workflows/yarn-update.yml
+++ b/.github/workflows/yarn-update.yml
@@ -35,6 +35,10 @@ jobs:
       if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
       run: |
         for dir in scripts/yarn client ; do
+          if [ ! -d $dir ] ; then
+            echo "Skipping $dir"
+            continue
+          fi
           pushd "$dir"
           yarn upgrade
           popd
