Move prismjs lib to new build workflow

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "mousetrap": "1.6.5",
     "mousetrap-global-bind": "1.1.0",
     "multi.js": "0.5.3",
+    "prismjs": "1.29.0",
     "slugify": "1.6.6",
     "tributejs": "5.1.3"
   },
