--- a/.github/workflows/uv-upgrade.yml
+++ b/.github/workflows/uv-upgrade.yml
@@ -61,7 +61,7 @@ jobs:
       if: hashFiles('uv.lock') != ''
 
     - name: Update current branch
-      if: (github.event_name == 'pull_request' && github.actor != "renovate[bot]" || ( github.event_name == "branch" && github.ref_name != "main" )
+      if: (github.event_name == 'pull_request' && github.actor != 'renovate[bot]' || ( github.event_name == "branch" && github.ref_name != "main" )
       uses: stefanzweifel/git-auto-commit-action@v5
       with:
         commit_message: 'chore(deps): update lockfile'
