chore: do not change localtime permissions
The file was removed.

--- a/dev-docker/weblate-dev/Dockerfile
+++ b/dev-docker/weblate-dev/Dockerfile
@@ -51,7 +51,7 @@ RUN apt-get update && apt-get install -y \
     libgirepository1.0-dev
 
 # List should match weblate/weblate
-RUN chown -R "${USER_ID}:${GROUP_ID}" /etc/nginx/sites-available/ /var/log/nginx/ /var/lib/nginx /app/data /app/cache /run /home/weblate /etc/localtime /etc/supervisor/conf.d /tmp/localtime /home
+RUN chown -R "${USER_ID}:${GROUP_ID}" /etc/nginx/sites-available/ /var/log/nginx/ /var/lib/nginx /app/data /app/cache /run /home/weblate /etc/localtime /etc/supervisor/conf.d /tmp /home
 
 # Start with fresh venv
 # Using the original would work, but chown on it is super slow, see https://github.com/docker/for-linux/issues/388
