--- a/REUSE.toml
+++ b/REUSE.toml
@@ -68,6 +68,12 @@ path = "weblate/static/vendor/font-source/**"
 precedence = "aggregate"
 
 [[annotations]]
+SPDX-FileCopyrightText = "Paul D. Hunt"
+SPDX-License-Identifier = "OFL-1.1"
+path = "weblate/static/js/vendor/fonts/**"
+precedence = "aggregate"
+
+[[annotations]]
 SPDX-FileCopyrightText = "Lea Verou"
 SPDX-License-Identifier = "MIT"
 path = "weblate/static/vendor/prism/**"
