--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -29,6 +29,7 @@ jobs:
     - run: brew upgrade
     - run: brew list --versions
     - run: brew deps --tree --installed
+    - run: brew unlink pkg-config@0.29.2
     - name: Install brew dependencies
       run: |
         brew install pango cairo gobject-introspection glib libyaml pkgconf zstd xxhash libxmlsec1 uv
