--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -37,4 +37,4 @@ jobs:
       run: |
         uv venv --python python3.12 .venv
         source .venv/bin/activate
-        uv pip install -e .[all,test]
+        uv pip install -e .[all]
