--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,22 @@ dev = [
   "reuse==5.0.2",
   "scour==0.38.2",
   "tinyunicodeblock==1.3",
+  {include-group = "docs"},
   {include-group = "lint"},
   {include-group = "test"},
   {include-group = "types"}
+]
+docs = [
+  "furo==2024.8.6",
+  "jinja2>=3.1.4",
+  "matplotlib==3.9.2",
+  "Pillow>=10.3.0,<12",
+  "Pygments>=2.17.0,<3.0",
+  "Sphinx==8.1.3",
+  "sphinx-copybutton==0.5.2",
+  "sphinx-jsonschema==1.19.1",
+  "sphinxcontrib-httpdomain==1.8.1",
+  "sphinxext-opengraph==0.9.1"
 ]
 lint = [
   {include-group = "pylint"},
@@ -110,7 +123,7 @@ dependencies = [
   "mistletoe>=1.4.0,<1.5",
   "nh3>=0.2.14,<0.3",
   "openpyxl>=3.1.0,<3.2",
-  "packaging>=22,<25",
+  "packaging>=23,<25",
   "phply>=1.2.6,<1.3",
   "Pillow>=10.3.0,<12",
   "pycairo>=1.20.0",
